# ytm-player

./: CHANGELOG.md  pyproject.toml
.github/workflows/: aur-publish.yml  check-python-versions.yml  ci.yml  publish.yml
aur/: PKGBUILD
src/ytm_player/: cli.py
src/ytm_player/app/: _app.py
src/ytm_player/services/: mpris.py  update_check.py
src/ytm_player/ui/: theme.py
src/ytm_player/ui/pages/: browse.py  context.py
src/ytm_player/ui/widgets/: track_table.py
src/ytm_player/utils/: doctor.py  logging.py
tests/test_cli/: test_config_command.py
tests/test_services/: test_mpris_platform_guard.py  test_update_check.py
tests/test_ui/: test_context_artist_album_list.py  test_theme_ansi.py  test_track_table.py
tests/test_utils/: test_doctor.py  test_logging.py
